new user profile view

--- a/TheSocialClub/templates/groups/friend_detailTSC.html
+++ b/TheSocialClub/templates/groups/friend_detailTSC.html
@@ -1,7 +1,7 @@
-{% extends "groups/group_baseTSC.html " %}
+{% extends "baseTSC.html " %}
 {% load static %}
 {% load bootstrap3 %}
-{% block group_base %}
+{% block base %}
 
 <div class="w3-card-4 overflow-hidden position-static" style="height: 615px; width: auto; z-index:1;">
     <!------------------------------------------------------------>  
@@ -17,16 +17,22 @@
 
         <div class="w3-col overflow-auto" style="height: 500px; background:#2A2F32;">
             
-            {% for friend in friendlist %}
+            {% for friend in friendlist %}  
             {% for user in friend.friends.all %}
                 <a href="{% url 'TheSocialClub:friendsingle' slug=user.username pk=user.id %}">
-                <div class="w3-row w3-hover-grey w3-text-white w-100">
+                <div class="w3-row w3-hover-grey w3-text-white w-100" style="height:56px; overflow: hidden;">
                     <img class="w3-circle w3-left w3-quarter m-2" src="{% if user.userinfo.propic %}{{user.userinfo.propic.url}}{% endif %}" style="height:40px;width:40px;">
                     <div class="w3-col w-75 p-1">
                         <div class="p-1">
                             <div class="">{{ user.username}}<br/></div>
                             {% for post in lastmsg %}
-                                <div class="small w3-text-white">{{post.msg_content}}<br/></div>
+                                
+                                {% if post.sender == user and post.reciever == request.user or post.sender == request.user and post.reciever == user %}
+                                    {% if post   %}
+                                        <div class="small w3-text-white">{{post.msg_content}}<br><br></div>         
+                                    {% endif %}
+                                {% endif %}
+                                
                             {% endfor %}
                         </div>
                     </div>   
@@ -123,7 +129,7 @@
                 <button onclick="hide()" style="border: none; background: none;"><img src="{% static 'png/paper-clip.png' %}" style="height: 30px; width: 30px;"></button>
             </div>
            
-            <form class="msg-form" action="{% url 'TheSocialClub:createmsg' slug=slug pk=pk %}" method="POST" enctype="multipart/form-data">
+            <form class="msgform" action="{% url 'TheSocialClub:createmsg' slug=slug pk=pk %}" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     
                     <div class="w3-container row pt-2">
@@ -139,9 +145,8 @@
 
                     console.log(window.location)
                     var loc = window.location
-                    var myForm = $('msg-form')
+                    var myForm = $('.msgform')
                     var msgInput = $('#msg-text')
-                    var chatbox = $('#chatbox')
 
                     var wsStart = 'ws://'
                     if(loc.protocol == 'https:'){
@@ -157,8 +162,9 @@
                     }
                     socket.onopen = function(e){
                         console.log('open', e)
-                        myForm.submit(function(event){
-                            event.preventDefault()
+
+                          myForm.submit(function(event){
+                            event.preventDefault();
                             var msgtext = msgInput.val()
                             var data_dict = {'message':msgtext}
                             socket.send(JSON.stringify(data_dict))
@@ -190,4 +196,4 @@
 </div>
 
 
-{% endblock group_base %}
+{% endblock base %}
