--- a/TheSocialClub/templates/indexTSC.html
+++ b/TheSocialClub/templates/indexTSC.html
@@ -1,9 +1,33 @@
 {% extends "baseTSC.html" %}
 {% block base %}
+{% load static %}
 
-<div class="w3-row" style="height: 655px; width: 100%; background: #06151d; position: fixed; z-index:0;">
+
+<div class="w3-row" style="height: 625px; width: 100%; background: #06151d; position: fixed; z-index:0;">
                 
     <div class="w3-col overflow-hidden border" style="height: 100%; width: 21.5%; background-color:#185c83;">
+
+        <div class="search-container">
+            <form class="msgform" action="" method="POST">
+                {% csrf_token %}   
+                <input class="msgtext" type="text" placeholder="Search.." name="search">
+                <button type="submit" class="w3-gray"><img src="{% static 'png/loupe.png' %}" style="height:22px;width:22px;"></button>
+            </form>
+        </div>
+<br>
+        <div class="w3-card-4 p-2 row">
+            <div id="append" class="col-4 p-2 w3-hover-border-blue">
+                {% include "search/search.html" %}
+                {% block search_block %}
+                {% endblock search_block %}
+            </div>
+        </div>
+
+
+
+
+
+
     </div>
 
     <div class="w3-col overflow-auto border" style="height: 100%; width: 56%; background-color:#2A2F32;">
@@ -28,7 +52,7 @@
             <div class="w3-container">
               <form action="{% url 'TheSocialClub:createpost' username=request.user.username %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ postform.as_p }}
                 <button type="submit" value="Post" class="w3-2021-french-blue w3-round-large" style="width:100%;">Post</button>
               </form>
               <br>
@@ -36,11 +60,7 @@
           </div>
         </div>
       
-       
-       
-       
-       
-       
+      
         <div style="padding-left: 15%; padding-right: 15%;">
             <div class="w3-centered p-3">
                 <div class="row">
@@ -66,16 +86,20 @@
         <div class="w3-container">
             {% for friend in friendlist %}
                 {% for user in friend.friends.all %}
-                    <a href="{% url 'TheSocialClub:friendsingle' slug=user.username pk=user.id %}">
+                    
                     <div class="w3-row w3-round-large w3-text-white w-100 w3-hover-gray pl-2">
-                        <img class="w3-circle w3-left w3-quarter my-2" src="{% if user.userinfo.propic %}{{user.userinfo.propic.url}}{% endif %}" style="height:35px;width:35px;">
-                        <div class="w3-col w-75 p-2">
-                            <div class="p-1">
-                                <div class="">{{ user.username}}</div>
+                        <a href="{% url 'accounts:details' slug=user.username %}">
+                            <img class="w3-circle w3-left w3-quarter my-2" src="{% if user.userinfo.propic %}{{user.userinfo.propic.url}}{% endif %}" style="height:35px;width:35px;">
+                        </a>
+                        <a href="{% url 'TheSocialClub:friendsingle' slug=user.username pk=user.id %}">
+                            <div class="w3-col w-75 p-2">
+                                <div class="p-1">
+                                    <div class="w3-text-white">{{ user.username}}</div>
+                                </div>
                             </div>
-                        </div>   
+                        </a> 
                     </div>
-                    </a>
+                    
                 {% endfor %}
             {% endfor %}
         </div>
@@ -84,4 +108,56 @@
 
 </div>
 
-{% endblock  %}
+<script>
+
+                    console.log(window.location)
+                    var loc = window.location
+                    var Form = $('.msgform')
+                    var msgInput = $('.msgtext')
+                    var result = $('#append')
+
+                    var wsStart = 'ws://'
+                    if(loc.protocol == 'https:'){
+                        wsStart = 'wss://'
+                    }
+
+                    var endpoint = wsStart + loc.host + loc.pathname
+                    var socket = new ReconnectingWebSocket(endpoint)
+
+                    socket.onmessage = function(e){
+                        console.log('message', e)
+                        console.log('message', e.data)
+                        var user = JSON.parse(e.data)
+                        result.append('<div class="p-2 w3-red">' + user.username + '</div>' + '<br>' + '<div>' + user.email + '</div>')
+                        
+                    }
+
+                    socket.onopen = function(e){
+                        console.log('open', e)
+                        console.log('message', e.data)  
+
+                        Form.submit(function(event){
+                        event.preventDefault();
+                            
+                        var msgtext = msgInput.val()
+                        var data_dict = {'message':msgtext}
+                        socket.send(JSON.stringify(data_dict))
+                        msgInput.val('')
+
+                        })
+
+                        
+
+                    }
+
+                    socket.onerror = function(e){
+                        console.log('error', e)
+                    }
+
+                    socket.onclose = function(e){
+                        console.log('close', e)
+                    }
+                            
+</script>
+
+{% endblock base %}
