--- a/TheSocialClub/templates/posts/_post.html
+++ b/TheSocialClub/templates/posts/_post.html
@@ -29,7 +29,7 @@
                 <img class="w3-round" style="height: 200px; width: 100%;" src="{{post.postimage.url}}">
             {% endif %}
             
-            <div class="mt-2 border-top border-dark">
+            <div class="mt-2">
                 <div class="row">
                     <div class="col-4"><div class="w3-center">like</div></div>
                     <div class="col-4"><div class="w3-center">Comment</div></div>
