--- a/templates/EditUserInfo.html
+++ b/templates/EditUserInfo.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block body_block %}
+{% block body_index %}
 {% load static %}
 {% load bootstrap3 %}
 
@@ -34,4 +34,4 @@
 
 </div>
 
-{% endblock %}
+{% endblock body_index %}
