--- a/templates/index.html
+++ b/templates/index.html
@@ -53,32 +53,57 @@
 
 
 <div class="w3-half w3-blue w3-left">
-    {% if user.is_authenticated %}
-    <a href="" class="w3-bar-item w3-button"><img src="{% static 'png/003-wordpress.png' %}" style="height:22px;width:22px;"></a>
-    <a href="" class="w3-bar-item w3-button"><img src="{% static 'png/039-dropbox.png' %}" style="height:22px;width:22px;"></a>
-    <a href="" class="w3-bar-item w3-button"><img src="{% static 'png/021-chat.png' %}" style="height:22px;width:22px;"></a>
-    <a href="" class="w3-bar-item w3-button"><img src="{% static 'png/048-notification.png' %}" style="height:22px;width:22px;"></a>
-    
-    <a class="w3-bar-item w3-button" 
-    {% if request.user.userinfo %}
-    href="{% url 'accounts:details' user.id %}"  
-    {% else %}
-    href="{% url 'accounts:create_user_info' pk=user.id %}"
-    {% endif %}>
-    <img class="w3-circle" src="{% if request.user.userinfo.propic %}{{request.user.userinfo.propic.url}}{% endif %}" style="height:22px;width:22px;"></a>
-       
-    <a id="tdn" class="w3-bar-item w3-button w3-right" href="{% url 'accounts:logout'%}">LOGOUT</a>
-    <a id="tdn" class="w3-bar-item w3-button w3-right">Hello, <span style="padding-left:2px;" >{{user.first_name.upper}}</span></a>
+    {% if request.user.is_authenticated %}
+        <a href="/search/" class="w3-bar-item w3-button"><img src="{% static 'png/loupe.png' %}" style="height:22px;width:22px;"></a>
+        <a href="" class="w3-bar-item w3-button"><img src="{% static 'png/003-wordpress.png' %}" style="height:22px;width:22px;"></a>
+        <a href="" class="w3-bar-item w3-button"><img src="{% static 'png/021-chat.png' %}" style="height:22px;width:22px;"></a>
+        
+        <div class="w3-dropdown-hover">
+            <div class="w3-bar-item w3-button">
+                <img src="{% static 'png/048-notification.png' %}" style="height:22px;width:22px;">
+                <i class="w3-pink w3-circle" style="height:3px; width:3px; right:10px; position: relative;">
+                   {% for friends in friendrequest %}
+                   *
+                   {% endfor %} 
+                </i>
+            </div>
+
+            <div class="w3-dropdown-content w3-card-4">
+                {% for friends in friendrequest %}
+                    <div class="w3-button w3-hover-black p-4 w3-black w-100 d-block">
+                        <span class="w3-text-aqua">{{friends.sender.username}}</span> <span class="w3-text-white"> sent you a friend request. </span> 
+                        <a href="{% url 'TheSocialClub:AcceptRequest' reciever=request.user.username sender=friends.sender.username %}"><div class="w3-text-green d-inline-block">Accept</div></a>
+                        <a href="{% url 'TheSocialClub:DeclineRequest' reciever=request.user.username sender=friends.sender.username %}"><div class="w3-text-red d-inline-block">Decline</div></a>
+                    </div>
+                {% endfor %}
+                
+            </div>
+        </div>
+        
+
+        <a class="w3-bar-item w3-button" 
+        {% if request.user.userinfo %}
+        href="{% url 'accounts:details' slug=request.user.username %}"  
+        {% else %}
+        href="{% url 'accounts:create_user_info' slug=request.user.username %}"
+        {% endif %}>
+            <img class="w3-circle" src="{% if request.user.userinfo.propic %}{{request.user.userinfo.propic.url}}{% endif %}" style="height:22px;width:22px;">
+        </a>
+        
+        <a id="tdn" class="w3-bar-item w3-button w3-right" href="{% url 'accounts:logout'%}">LOGOUT</a>
+        <a id="tdn" class="w3-bar-item w3-button w3-right">Hello, <span style="padding-left:2px;" >{{request.user.first_name.upper}}</span></a>
 
     {% else %}
-    <a id="tdn" class="w3-bar-item w3-button w3-right" href="{% url 'accounts:login' %}">Login</a>
-    <a id="tdn" class="w3-bar-item w3-button w3-right" href="{% url 'accounts:signup' %}">Sign Up</a>
+
+        <a id="tdn" class="w3-bar-item w3-button w3-right" href="{% url 'accounts:login' %}">Login</a>
+        <a id="tdn" class="w3-bar-item w3-button w3-right" href="{% url 'accounts:signup' %}">Sign Up</a>
+
     {% endif %}
 </div>
 
 </nav>
 
-{% block body_block %}
+{% block body_index %}
 
     <div id="divlogo">
         <br>
@@ -169,7 +194,7 @@
         </div>
 
         <div class="content_block">
-            <img class="content_block_image" src={% static "Processors/qualcommflagship-5.jpg" %} alt="Snapdragon 835">
+            <img class="content_block_image" src="{% static 'Processors/qualcommflagship-5.jpg' %}" alt="Snapdragon 835">
             <div class="content_block_bottom">
                 <div class="content_block_bottom_heading">Snapdragon 835</div>
                 <div class="content_block_bottom_text">
@@ -478,7 +503,7 @@
         <img class="qllogo" src="{% static 'Processors/QL.jpg' %}" alt="logo">
     </footer>
 
-{% endblock %}
+{% endblock body_index %}
 
 </body>
 </html>
