--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block body_block %}
+{% block body_index %}
 {% load bootstrap3 %}
 
 <br><br><br><br><br><br><br><br>
@@ -17,4 +17,4 @@
 
 </div>
 
-{% endblock body_block %}
+{% endblock body_index %}
